Updated jquery, script, some slight restructuring.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!-- $title New Project: Index -->
 <!-- $metadescription Don't Forget the Meta Description -->
 
-<!-- @include header -->
+<!-- @include head -->
 
-<div role="main" class="container">
+<body>
+	
+  <header class="siteheader" role="banner">
+  
+    <!-- @include nav -->
+    
+  </header>
 
-  This is the index page.
+  <div role="main" class="container">
 
-</div>
+    This is the index.
 
-<!-- @include footer -->
+  </div>
+
