--- a/page.html
+++ b/page.html
@@ -1,12 +1,19 @@
 <!-- $title New Project: Page -->
 <!-- $metadescription Don't Forget the Meta Description -->
 
-<!-- @include header -->
+<!-- @include head -->
 
-<div role="main" class="container">
+<body>
 
-  This is a page.
+  <header class="siteheader" role="banner">
 
-</div>
-		
-<!-- @include footer -->
+    <!-- @include nav -->
+
+  </header>
+
+  <div role="main" class="container">
+
+    This is a page.
+
+  </div>
+
